--- a/contact.html
+++ b/contact.html
@@ -1018,7 +1018,7 @@ body {
         <div class="about-section">
             <h2 class="section-title">नकाशा (Location)</h2>
             <div class="map-responsive">
-                <iframe src="MapLink" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15325.936295732296!2d74.39072505!3d16.195534950000003!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bc08e30893fd0f7%3A0x339acc91cf2b59a4!2sChannekuppi%2C%20Maharashtra%20416502!5e0!3m2!1sen!2sin!4v1767336634829!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
         <div class="about-section text-center">
